mtk: wifi: mt76: testmode: add basic testmode support
Signed-off-by: StanleyYP Wang <StanleyYP.Wang@mediatek.com>

Add testmode eeprom buffer mode support

Signed-off-by: StanleyYP Wang <StanleyYP.Wang@mediatek.com>

Fix power & freq offset issue for iTest power cal & tx/rx verifcation
1. Wait for fw to tx. Otherwise, iTest testing tool cannot get the
accurate tx power.
2. In crystal mode, freq offset is set in 6G band and forwarded to 5G
and 2G band. Therefore, we should avoid reseting freq offset to 0 when
6G interface is off.

Signed-off-by: StanleyYP Wang <StanleyYP.Wang@mediatek.com>

edcca return err in testmode; therefore, bypass it when we are in testmode idle state or testmode bf is on

Signed-off-by: StanleyYP Wang <StanleyYP.Wang@mediatek.com>

--- a/mt7996/Makefile
+++ b/mt7996/Makefile
@@ -8,5 +8,6 @@ mt7996e-y := pci.o init.o dma.o eeprom.o main.o mcu.o mac.o \
 	     debugfs.o mmio.o
 
 mt7996e-$(CONFIG_DEV_COREDUMP) += coredump.o
+mt7996e-$(CONFIG_NL80211_TESTMODE) += testmode.o
 
 mt7996e-y += mtk_debugfs.o mtk_mcu.o
